--- a/app/src/main/res/layout/activity_add_contact.xml
+++ b/app/src/main/res/layout/activity_add_contact.xml
@@ -3,21 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f0f0f0"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_top_bar"
         android:layout_marginBottom="40dp"
-        android:background="@color/top_bar_normal_bg"
-        android:gravity="center_vertical" >
+        android:background="@color/colorPrimary"
+        android:gravity="center_vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="申请好友"
+            android:text="@string/add_server_title"
             android:textColor="#fff"
             android:textSize="18sp" />
     </RelativeLayout>
@@ -28,7 +28,7 @@
         android:layout_height="54dp"
         android:layout_margin="20dp"
         android:background="#fff"
-        android:hint="输入对方的环信username"
+        android:hint="@string/server_id_hint"
         android:paddingLeft="10dp" />
 
     <Button
@@ -36,8 +36,18 @@
         android:layout_width="match_parent"
         android:layout_height="54dp"
         android:layout_margin="20dp"
-        android:background="#000"
-        android:text="发出申请"
+        android:background="@color/colorPrimary"
+        android:text="@string/add_server_btn"
+        android:textColor="#fff"
+        android:textSize="16sp" />
+
+    <Button
+        android:id="@+id/btn_add_scan"
+        android:layout_width="match_parent"
+        android:layout_height="54dp"
+        android:layout_margin="20dp"
+        android:background="@color/colorPrimary"
+        android:text="@string/add_server_scan_btn"
         android:textColor="#fff"
         android:textSize="16sp" />
 
