--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -2,20 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_top_bar"
-        android:background="@color/top_bar_normal_bg"
-        android:gravity="center_vertical" >
+        android:background="@color/colorPrimary"
+        android:gravity="center_vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="通讯录"
+            android:text="@string/server_list"
             android:textColor="#fff"
             android:textSize="18sp" />
 
@@ -27,7 +27,7 @@
             android:background="@null"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:text="添加好友"
+            android:text="@string/add_server"
             android:textColor="#fff"
             android:textSize="14sp" />
     </RelativeLayout>
