--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_top_bar"
         android:layout_marginBottom="20dp"
-        android:background="@color/top_bar_normal_bg"
+        android:background="@color/colorPrimary"
         android:gravity="center_vertical" >
 
         <TextView
@@ -57,7 +57,7 @@
             android:layout_height="48dp"
             android:layout_marginRight="10dip"
             android:layout_weight="1"
-            android:background="#000"
+            android:background="@color/colorPrimary"
             android:gravity="center"
             android:onClick="register"
             android:paddingBottom="7dp"
@@ -71,7 +71,7 @@
             android:layout_height="48dp"
             android:layout_marginLeft="10dip"
             android:layout_weight="1"
-            android:background="#000"
+            android:background="@color/colorPrimary"
             android:gravity="center"
             android:onClick="login"
             android:paddingBottom="7dp"
