--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -55,7 +55,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="10dp"
-            android:background="#000"
+            android:background="@color/colorPrimary"
             android:onClick="register"
             android:paddingBottom="7dp"
             android:paddingTop="7dp"
