--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -17,6 +17,18 @@
             android:layout_centerInParent="true"
             android:textColor="#fff"
             android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/btn_del"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:background="@null"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="@string/remove_server"
+            android:textColor="#fff"
+            android:textSize="14sp" />
     </RelativeLayout>
 
     <RelativeLayout
