--- a/app/src/main/res/layout/item_view_cmdlist_cmd.xml
+++ b/app/src/main/res/layout/item_view_cmdlist_cmd.xml
@@ -2,17 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#dee5f3"
-    android:padding="@dimen/cmd_item_view_padding"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv_cmd_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#333333"
-        android:textSize="20sp"
+        android:layout_gravity="right|center_vertical"
+        android:background="@drawable/cmd_item_bkg_request"
+        android:gravity="center_vertical"
+        android:minHeight="30dp"
+        android:padding="@dimen/cmd_item_view_padding"
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
         tools:text="拍照" />
 
     <TextView
@@ -21,6 +24,7 @@
         android:layout_height="wrap_content"
         android:textColor="#666666"
         android:textSize="16sp"
+        android:visibility="gone"
         tools:text="takepic" />
 
     <TextView
@@ -29,6 +33,7 @@
         android:layout_height="wrap_content"
         android:textColor="#666666"
         android:textSize="16sp"
+        android:visibility="gone"
         tools:text="2017-02-14 21:30:06" />
 
 </LinearLayout>
