--- a/app/src/main/res/layout/item_view_cmdlist_response_img.xml
+++ b/app/src/main/res/layout/item_view_cmdlist_response_img.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/cmd_item_view_padding"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/iv_pic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:background="@drawable/cmd_item_bkg_response"
+        android:padding="@dimen/cmd_item_view_padding"
+        android:scaleType="fitCenter" />
 </LinearLayout>
