--- a/app/src/main/res/layout/item_view_cmdlist_response_txt.xml
+++ b/app/src/main/res/layout/item_view_cmdlist_response_txt.xml
@@ -3,14 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/cmd_item_view_padding"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/iv_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#666666"
+        android:layout_gravity="left|center_vertical"
+        android:background="@drawable/cmd_item_bkg_response"
+        android:gravity="center_vertical"
+        android:minHeight="30dp"
+        android:padding="@dimen/cmd_item_view_padding"
+        android:textColor="#333333"
         android:textSize="16sp"
         tools:text="Command failed!" />
+
 </LinearLayout>
