--- a/app/src/main/res/layout/activity_video_call.xml
+++ b/app/src/main/res/layout/activity_video_call.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.penghaonan.homemonitor.server.command.videocall.VideoCallActivity">
+    android:layout_height="match_parent">
 
     <com.hyphenate.media.EMOppositeSurfaceView
         android:id="@+id/sv_remote"
@@ -25,6 +23,7 @@
         android:layout_marginTop="50dp"
         android:background="#33000000"
         android:padding="5dp"
+        android:text="@string/video_call_connecting"
         android:textColor="@android:color/white"
         tools:text="just for test" />
 </FrameLayout>
